--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^5.6.0",
+    "@stripe/stripe-js": "^8.7.0",
+    "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.38.0",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "@supabase/supabase-js": "^2.38.0",
-    "@supabase/ssr": "^0.1.0",
     "stripe": "^14.0.0",
     "zod": "^3.22.0"
   },
@@ -21,8 +23,11 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.0.0",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.18"
   }
 }
