--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@stripe/stripe-js": "^8.7.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.38.0",
-    "next": "14.0.0",
+    "next": "^14.2.12",
     "react": "^18",
     "react-dom": "^18",
     "stripe": "^14.0.0",
@@ -24,7 +24,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.0.0",
+    "eslint-config-next": "^14.2.12",
     "pg": "^8.18.0",
     "postcss": "^8",
     "tailwindcss": "^3",
