--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5",
+    "vercel": "^50.17.1",
     "vitest": "^4.0.18"
   }
 }
